--- a/Module6/Module6/Base.lproj/Main.storyboard
+++ b/Module6/Module6/Base.lproj/Main.storyboard
@@ -23,6 +23,30 @@
             </objects>
             <point key="canvasLocation" x="1522" y="60"/>
         </scene>
+        <!--View Controllertwo-->
+        <scene sceneID="UHg-nd-N1c">
+            <objects>
+                <viewController id="wwe-gl-nwd" customClass="ViewControllertwo" customModule="Module6" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="36F-of-NE7">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DUc-eR-641">
+                                <rect key="frame" x="126" y="394" width="162" height="109"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Hello">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="XnY-Bc-KO3"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aJi-IN-I9P" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2292.753623188406" y="59.598214285714285"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="Vz2-pa-Y4V">
             <objects>
